--- a/vignettes/bate-vignette.Rmd
+++ b/vignettes/bate-vignette.Rmd
@@ -110,9 +110,9 @@ You can install `bate` like so:
 # install.packages("devtools")
 devtools::install_github("dbasu-umass/bate")
 ```
-## Example
+## Example: Impact of Maternal Behavior on Child IQ
 
-### Impact of Maternal Behavior on Child IQ
+### Setting Up
 Let us load the data set.
 ```{r}
 data("NLSY_IQ")
@@ -128,6 +128,8 @@ Let us set `age` and `race` as factor variables
 NLSY_IQ$age <- factor(NLSY_IQ$age)
 NLSY_IQ$race <- factor(NLSY_IQ$race)
 ```
+
+### Using ovbias()
 Let us use the `collect_par()` function to collect parameters from the short, intermediate and auxiliary regressions.
 ```{r}
 parameters <- bate::collect_par(data=NLSY_IQ,
@@ -165,15 +167,17 @@ and quantiles of the BATE (computed over the bounded box we chose above).
 (OVB$bstar_Distribution)
 ```
 We can create the histogram and density plot of the omitted variable bias.
-```{r}
+```{r, out.width="50%"}
 dplotbate(OVB$Data)
 ```
 
 We can also create a contour plot of BATE over the bounded box.
-```{r}
+```{r, out.width="50%"}
 cplotbias(OVB$Data)
 ```
 
+
+### Using the ovbias_par() function
 We could have carried out the same analysis using the `ovbias_par()` function.
 ```{r}
 OVB.par <- ovbias_par(
@@ -196,6 +200,7 @@ and quantiles of the BATE (computed over the bounded box we chose above).
 (OVB.par$bstar_Distribution)
 ```
 
+### Using the ovbias_lm() function
 We could have also carried out the same analysis using the `ovbias_lm()` function. To use this function, we need to estimate the short regression
 ```{r}
 reg_col1 <- lm(
@@ -242,6 +247,5 @@ and quantiles of the BATE (computed over the bounded box we chose above).
 ```
 
 
-### Impact of Maternal Behavior on Child Birthweight
 
 
